testing/errors/invalidhexdigit1.a
	*=$1000
	!tx "ab\xg" 	; -> "Invalid hex digit after \x, expected 0-9/a-f."
